# PyNumDiff

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  linting.py  paper.bib  paper.md  pynumdiff_joss_20211007.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  release.yml  test.yml
deprecated/examples_old/: 2a_optimizing_parameters_with_dxdt_known.ipynb  2b_optimizing_parameters_with_dxdt_unknown.ipynb
deprecated/pynumdiff_old/: __init__.py
docs/: requirements.txt
docs/source/: LICENSE.rst  basis_fit.rst  code.rst  conf.py  contact.rst  index.rst  (+8 more)
examples/: 1_basic_tutorial.ipynb  2a_optimizing_parameters_with_dxdt_known.ipynb  2b_optimizing_parameters_with_dxdt_unknown.ipynb  3_automatic_method_suggestion.ipynb  4_performance_analysis.ipynb  5_robust_outliers_demo.ipynb
mosek/: mosek.lic
notebooks/: 1_basic_tutorial.ipynb  2a_optimizing_parameters_with_dxdt_known.ipynb  2b_optimizing_parameters_with_dxdt_unknown.ipynb  3_automatic_method_suggestion.ipynb  4_performance_analysis.ipynb  5_robust_outliers_demo.ipynb  6_multidimensionality_demo.ipynb  7_circular_domain.ipynb  7_circular_variables.ipynb  PySINDy.ipynb  PySINDy_IntegralForm.ipynb  README.md  model_based_sindy_example.ipynb
paper/: paper.bib  paper.md
pynumdiff/: README.md  __init__.py  __version__.py  basis_fit.py  finite_difference.py  kalman_smooth.py  linear_model.py  optimize.py  polynomial_fit.py  smooth_finite_difference.py  total_variation_regularization.py
(+1147 files in other folders)
