[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynumdiff"
dynamic = ["version"]
description = "pynumdiff: numerical derivatives in python"
readme = "README.md"
license = {text = "MIT"}
maintainers = [
  {name = "Floris van Breugel", email = "fvanbreugel@unr.edu"},
  {name = "Yuying Liu", email = "yliu814@uw.edu"},
  {name = "Pavel Komarov", email = "pvlkmrv@uw.edu"}
]
keywords = ["derivative", "smoothing", "curve fitting", "optimization", "total variation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/florisvb/PyNumDiff"
documentation = "https://pynumdiff.readthedocs.io/"
package = "https://pypi.org/project/pynumdiff/"

[project.optional-dependencies]
advanced = [
    "cvxpy",
    "tqdm"
]
dev = [
    "pylint",
    "pytest",
    "cvxopt",
    "cvxpy"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
    "cvxpy", # necessary to document modules which import this
    "tqdm" # optimize module imports this
]

[tool.setuptools_scm]
write_to = "pynumdiff/_version.py"
